added json pipeline for running in one chunk

--- a/Lidar/santa_monica_tile.ipynb
+++ b/Lidar/santa_monica_tile.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pip install pdal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -79,7 +86,7 @@
     "    '''Creates, validates and then returns the pdal pipeline\n",
     "    \n",
     "    Arguments:\n",
-    "    bbox       -- Tuple - Bounding box in srs coordintes (default srs is EPSG:3857),\n",
+    "    ept_bbox   -- Tuple - Bounding box in srs coordintes (default srs is EPSG:3857),\n",
     "                  in the form: ([xmin, xmax], [ymin, ymax]).\n",
     "    chm_path   -- String - Path where the CHM shall be saved. Must include .tif exstension.\n",
     "    srs        -- String - EPSG identifier for srs  being used. Defaults to EPSG:3857\n",
@@ -130,10 +137,14 @@
     "            \"limits\":\"HeightAboveGround[0:35]\"\n",
     "            },\n",
     "            {\n",
+    "            \"type\":\"filters.crop\",\n",
+    "            \"bounds\":\"${out_bbox}\",\n",
+    "            \"a_srs\":\"\"\n",
+    "            },\n",
+    "            {\n",
     "            \"filename\": \"${chm_path}\",\n",
     "            \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
     "            \"nodata\": -9999,\n",
-    "            \"bounds\": \"${out_bbox}\",\n",
     "            \"output_type\": \"idw\",\n",
     "            \"resolution\": 0.6,\n",
     "            \"type\": \"writers.gdal\",\n",
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,16 +255,7 @@
     "        xmax26911, ymax26911, zmax26911 = transform.TransformPoint(y, x)\n",
     "        box = ([xmin26911, xmax26911],[ymin26911, ymax26911])\n",
     "        bxs_26911.append(box)\n",
-    "    return((bxs, bxs_26911))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bxs = make_tile_bounds(bounds, n)"
+    "    return(bxs, bxs_26911)"
    ]
   },
   {
@@ -269,24 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[                                        ] | 0% Completed |  0.3s"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "@delayed\n",
-    "def tilez(i, bbox, out_bbox):\n",
+    "def tilez(i, bbox, out_bbox, verbose=False):\n",
     "    chm_path = f'{tmp}/chm{i}.tif'\n",
     "    pipeline = make_pipe(bbox, out_bbox, chm_path, resolution=0.5)\n",
+    "    if verbose: print(f'pipeline made for {out_bbox}')\n",
     "    try:\n",
     "        count = pipeline.execute()\n",
+    "        if verbose: print(f'pipeline executed for {out_bbox} with {count} points')\n",
     "    except RuntimeError as e:\n",
     "        print(f'This happened --{e}-- on the bbox {bbox}')\n",
     "    except Exception as e:\n",
@@ -297,10 +292,86 @@
     "# make a variable for its path\n",
     "home = os.path.expanduser('~')\n",
     "tmp = f'{home}/tmp'\n",
-    "    \n",
+    "\n",
+    "os.makedirs(tmp, exist_ok=True)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(([-13193324.604065126, -13192499.295988139],\n",
+       "  [4028150.3753440287, 4028895.40680415]),\n",
+       " ([1220773.1801623667, 1220696.238052276],\n",
+       "  [-11439137.435993029, -11439405.694375526]))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bxs = make_tile_bounds(bounds, n)\n",
+    "ept_boxs = bxs[0]\n",
+    "out_boxs = bxs[1]\n",
+    "\n",
+    "bxs = list(zip(ept_boxs, out_boxs))\n",
+    "bxs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pipeline made for ([1220269.187255214, 1220192.1536190943], [-11439384.066642016, -11439652.296188898])\n",
+      "This happened --writers.gdal: Grid width or height is too large. Width and height are limited to 2147483647 cells.Try setting bounds or increasing resolution.-- on the bbox ([-13193324.604065126, -13192499.295988139], [4030385.4697243925, 4031130.501184514])\n",
+      "pipeline made for ([1220101.1717738886, 1220024.1076317567], [-11439466.237873677, -11439734.45780214])\n",
+      "This happened --writers.gdal: Grid width or height is too large. Width and height are limited to 2147483647 cells.Try setting bounds or increasing resolution.-- on the bbox ([-13193324.604065126, -13192499.295988139], [4031130.501184514, 4031875.532644635])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, b in enumerate(bxs[3:5]):\n",
+    "    tilez(i, b[0], b[1], verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77.03363611968234 268.22954688221216\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs(1220269.187255214 - 1220192.1536190943), abs(-11439384.066642016 -(-11439652.296188898)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "results = []\n",
     "for i, bboxs in enumerate(bxs):\n",
-    "    results.append(tilez(i, bboxs[0], bboxs[1]))\n",
+    "    results.append(delayed(tilez)(i, bboxs[0], bboxs[1], verbose=True))\n",
     "\n",
     "with ProgressBar():\n",
     "    computed_results = compute(*results)"
