--- a/Utils/Untitled.ipynb
+++ b/Utils/Untitled.ipynb
@@ -33,40 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epsg:4326 v EPSG:26911\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def clip_raster(image_path, shape_path, out_path, out_crs=None):\n",
     "    '''clips image with shp'''\n",
-    "    \n",
+    "\n",
     "    # ensure files conform to the desired crs\n",
-    "    image_path, shape_path = checkFix_proj(image_path, shape_path, out_crs)\n",
-    "    \n",
+    "    image_path, shape_path = checkFix_proj(image_path, shape_path, crs=out_crs)\n",
+    "\n",
     "    # read the shape\n",
     "    with fiona.open(shape_path, 'r') as shp:\n",
     "        geoms = [feature['geometry'] for feature in shp]\n",
-    "    \n",
+    "\n",
     "    # read the tif\n",
     "    with rasterio.open(image_path) as src:\n",
     "        out_image, out_transform = rasterio.mask.mask(src, geoms, crop=True)\n",
     "        out_meta = src.meta\n",
-    "    \n",
+    "\n",
     "    # write clipped file\n",
     "    out_meta.update({'driver': 'GTiff', 'height': out_image.shape[1],\n",
     "                     'width': out_image.shape[2], 'transform': out_transform})\n",
-    "    \n",
+    "\n",
     "    with rasterio.open(out_path, 'w', **out_meta) as dst:\n",
     "        dst.write(out_image)\n",
     "\n",
+    "    \n",
     "def checkFix_proj(image_path, shape_path, crs=None):\n",
     "    '''Checks to make sure the crs is the same for image and shape.\n",
     "    If they are not the same, transforms shp to the image crs, or optionaly,\n",
@@ -90,7 +83,6 @@
     "            skip = True\n",
     "\n",
     "    # transform shp if necessary and write to file\n",
-    "    print(f'{shp.crs} v {crs}')\n",
     "    if shp.crs != crs:\n",
     "        # make the path to write transformed img to\n",
     "        if not os.path.isdir('tmp'):\n",
@@ -126,12 +118,34 @@
     "                        dst_crs=crs,\n",
     "                        resampling=Resampling.nearest)\n",
     "        \n",
-    "        return(img_path, shp_path)\n",
+    "    return(img_path, shp_path)\n",
     "    \n",
-    "    else:\n",
-    "        return(None)\n",
+    "    \n",
     "\n",
-    "checkFix_proj(image_path, shape_path)"
+    "#checkFix_proj(image_path, shape_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_path = 'tmp/clipped.tif'\n",
+    "clip_raster(image_path, shape_path, out_path)"
    ]
   },
   {
@@ -139,9 +153,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "clip_raster(image_path, shape_path, out_path)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
