--- a/NAIP/santa_monica_ndvi.ipynb
+++ b/NAIP/santa_monica_ndvi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "       0.0, -1.0, 3770340.0), 'tiled': False, 'interleave': 'pixel'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "(4, 14334, 11946)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,11 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_file = f'mask_{str(thresh)}.tif'\n",
+    "tmp = '/home/jovyan/tmp'\n",
+    "os.makedirs(tmp, exist_ok=True)\n",
+    "\n",
+    "mask_file = f'{tmp}/mask_{str(thresh)}.tif'\n",
     "profile['count'] = 1\n",
     "mask = mask.reshape(1, 14334, 11946)\n",
     "\n",
@@ -296,62 +299,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args='gdalwarp -cutline /home/jovyan/tmp/clipper.shp -crop_to_cutline /home/jovyan/tmp/alligned_mask.tif /home/jovyan/tmp/cropped_mask.tif', returncode=1, stdout=b'', stderr=b'ERROR 1: Output dataset /home/jovyan/tmp/cropped_mask.tif exists,\\nbut some command line options were provided indicating a new dataset\\nshould be created.  Please delete existing dataset and run again.\\n\\n')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tmp = '/home/jovyan/tmp'\n",
-    "os.makedirs(tmp, exist_ok=True)\n",
-    "\n",
-    "chm_path = f'{filepath}/santa_monica_mosaic_35mlimit_originwarp.tiff'\n",
-    "alligned_mask = f'{tmp}/alligned_mask.tif'\n",
-    "cropped_mask = f'{tmp}/cropped_mask.tif'\n",
-    "\n",
-    "cmd = f'gdaltindex {tmp}clipper.shp {chm_path}'\n",
-    "subprocess.run(cmd, shell=True, capture_output=True)\n",
-    "\n",
-    "cmd = f'gdalwarp -tr 1 1 -tap {mask_file} {alligned_mask}'\n",
-    "subprocess.run(cmd, shell=True, capture_output=True)\n",
-    "\n",
-    "cmd = f'gdalwarp -cutline {tmp}/clipper.shp -crop_to_cutline {alligned_mask} {cropped_mask}'\n",
-    "subprocess.run(cmd, shell=True, capture_output=True)\n"
+    "import subprocess\n",
+    "import fiona\n",
+    "import rasterio\n",
+    "import rasterio.mask\n",
+    "from rasterio.plot import show\n",
+    "from rasterio.warp import calculate_default_transform, reproject, Resampling\n",
+    "import geopandas as gpd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='gdalwarp -tr 1 1 -tap /home/jovyan/UrbanForest/santa_monica_mosaic_35mlimit_originwarp.tiff /home/jovyan/tmp/santa_monica_mosaic_35mlimit_originwarp_w.tiff', returncode=0, stdout=b'Creating output file that is 6900P x 6241L.\\nProcessing /home/jovyan/UrbanForest/santa_monica_mosaic_35mlimit_originwarp.tiff [1/1] : 0Using internal nodata values (e.g. -9999) for image /home/jovyan/UrbanForest/santa_monica_mosaic_35mlimit_originwarp.tiff.\\nCopying nodata values from source /home/jovyan/UrbanForest/santa_monica_mosaic_35mlimit_originwarp.tiff to destination /home/jovyan/tmp/santa_monica_mosaic_35mlimit_originwarp_w.tiff.\\n...10...20...30...40...50...60...70...80...90...100 - done.\\n', stderr=b'')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chm_path = f'{filepath}/santa_monica_mosaic_35mlimit_originwarp.tiff'\n",
+    "alligned_chm = f'{tmp}/santa_monica_mosaic_35mlimit_originwarp_w.tiff'\n",
+    "alligned_mask = f'{tmp}/alligned_mask.tif'\n",
+    "\n",
+    "\n",
+    "#cmd = f'gdaltindex {clipper} {chm_path}'\n",
+    "#subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "cmd = f'gdalwarp -tr 1 1 -tap {mask_file} {alligned_mask}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "cmd = f'gdalwarp -tr 1 1 -tap {chm_path} {alligned_chm}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "#cmd = f'gdalwarp -cutline {clipper} -crop_to_cutline {alligned_mask} {cropped_mask}'\n",
+    "#subprocess.run(cmd, shell=True, capture_output=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "masked = 'santa_monica_mosaic_35mlimit_originwarp_NDVI_thresh25_masked.tiff'\n",
+    "def clip_raster(image_path, shape_path, out_path, out_crs=None):\n",
+    "    '''clips image with shp'''\n",
     "\n",
-    "with rio.open(cropped_mask, 'r') as mask:\n",
-    "    with rio.open(chm_path, 'r') as src:\n",
+    "    # ensure files conform to the desired crs\n",
+    "    image_path, shape_path = checkFix_proj(image_path, shape_path, crs=out_crs)\n",
+    "\n",
+    "    # read the shape\n",
+    "    with fiona.open(shape_path, 'r') as shp:\n",
+    "        geoms = [feature['geometry'] for feature in shp]\n",
+    "\n",
+    "    # read the tif\n",
+    "    with rasterio.open(image_path) as src:\n",
+    "        out_image, out_transform = rasterio.mask.mask(src, geoms, crop=True)\n",
+    "        out_meta = src.meta\n",
+    "\n",
+    "    # write clipped file\n",
+    "    out_meta.update({'driver': 'GTiff', 'height': out_image.shape[1],\n",
+    "                     'width': out_image.shape[2], 'transform': out_transform})\n",
+    "\n",
+    "    with rasterio.open(out_path, 'w', **out_meta) as dst:\n",
+    "        dst.write(out_image)\n",
+    "\n",
+    "    \n",
+    "def checkFix_proj(image_path, shape_path, crs=None):\n",
+    "    '''Checks to make sure the crs is the same for image and shape.\n",
+    "    If they are not the same, transforms shp to the image crs, or optionaly,\n",
+    "    ensures both are in specified crs.\n",
+    "    image_path -- str - path to tiff.\n",
+    "    shape_path -- str - path to shapefile.\n",
+    "    crs        -- str - crs to be used. If None, uses img crs.\n",
+    "    '''\n",
+    "    # housecleaning supplies\n",
+    "    shp_path, img_path = shape_path, image_path\n",
+    "    skip = False\n",
+    "    global del_dir\n",
+    "    del_dir = False\n",
+    "    \n",
+    "    # open the files and determine what crs to use\n",
+    "    shp = gpd.read_file(shape_path)\n",
+    "    with rasterio.open(image_path) as img:\n",
+    "        if crs == None:\n",
+    "            crs = img.crs\n",
+    "            crs = crs.to_string()\n",
+    "            skip = True\n",
+    "\n",
+    "    # transform shp if necessary and write to file\n",
+    "    if shp.crs != crs:\n",
+    "        # make the path to write transformed img to\n",
+    "        if not os.path.isdir('tmp'):\n",
+    "            os.mkdir('tmp')\n",
+    "            del_dir = True\n",
+    "        shp_path = 'tmp/shp_tranformed.shp'\n",
+    "            \n",
+    "        # transform and write\n",
+    "        shp = shp.to_crs(crs)\n",
+    "        shp.to_file(filename=shp_path)\n",
+    "    # transform the image if necessary\n",
+    "    if not skip:\n",
+    "\n",
+    "        # make the path to write transformed img to\n",
+    "        if not os.path.isdir('tmp'):\n",
+    "            os.mkdir('tmp')\n",
+    "            del_dir = True\n",
+    "        img_path = 'tmp/img_tranformed.tif'\n",
+    "        \n",
+    "        # transform and write img\n",
+    "        with rasterio.open(image_path) as img:\n",
+    "            transform, width, height = calculate_default_transform(img.crs, crs, img.width, img.height, *img.bounds)\n",
+    "            kwargs = img.meta.copy()\n",
+    "            kwargs.update({'crs' : crs, 'transform': transform, 'width': width, 'height': height})\n",
+    "            with rasterio.open(img_path, 'w', **kwargs) as dst:\n",
+    "                for band in range(1, img.count + 1):\n",
+    "                    reproject(\n",
+    "                        source=rasterio.band(img, band),\n",
+    "                        destination=rasterio.band(dst, band),\n",
+    "                        src_transform=img.transform,\n",
+    "                        src_crs=img.crs,\n",
+    "                        dst_transform=transform,\n",
+    "                        dst_crs=crs,\n",
+    "                        resampling=Resampling.nearest)\n",
+    "        \n",
+    "    return(img_path, shp_path)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape_path = os.path.join(filepath, 'santa_monica_boundary/santa_monica_boundary.shp')\n",
+    "\n",
+    "clipped_chm = f'{tmp}/santa_monica_mosaic_CHM_clipped.tif'\n",
+    "clip_raster(alligned_chm, shape_path, clipped_chm)\n",
+    "\n",
+    "clipped_mask = f'{tmp}/santa_monica_mask_clipped.tif'\n",
+    "clip_raster(alligned_mask, shape_path, clipped_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='gdalwarp -tr 1 1 -tap /home/jovyan/tmp/santa_monica_mask_clipped.tif /home/jovyan/tmp/santa_monica_mask_clipped_w.tif', returncode=0, stdout=b'Creating output file that is 6833P x 6166L.\\nProcessing /home/jovyan/tmp/santa_monica_mask_clipped.tif [1/1] : 0...10...20...30...40...50...60...70...80...90...100 - done.\\n', stderr=b'')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "clipped_chm_w = f'{tmp}/santa_monica_mosaic_CHM_clipped_w.tif'\n",
+    "cmd = f'gdalwarp -tr 1 1 -tap {clipped_chm} {clipped_chm_w}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "clipped_mask_w = f'{tmp}/santa_monica_mask_clipped_w.tif'\n",
+    "cmd = f'gdalwarp -tr 1 1 -tap {clipped_mask} {clipped_mask_w}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "masked = f'{tmp}/santa_monica_mosaic_masked_CHM.tiff'\n",
+    "\n",
+    "with rio.open(clipped_mask, 'r') as mask:\n",
+    "    with rio.open(clipped_chm, 'r') as src:\n",
     "        masked_arr = mask.read() * src.read()\n",
     "        profile = src.profile\n",
     "        with rio.open(masked, 'w', **profile) as dst:\n",
     "            dst.write(masked_arr) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
