--- a/NAIP/santa_monica_ndvi-60cm.ipynb
+++ b/NAIP/santa_monica_ndvi-60cm.ipynb
@@ -9,21 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import rasterio as rio\n",
-    "#import rioxarray as rxr\n",
-    "from rasterio.windows import Window\n",
-    "import geopandas as gpd\n",
-    "import earthpy as et\n",
-    "import earthpy.spatial as es\n",
-    "import earthpy.plot as ep\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "import numpy as np"
    ]
   },
   {
@@ -35,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +55,7 @@
        "       0.0, -0.6, 3770340.0), 'tiled': False, 'interleave': 'pixel'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +78,7 @@
        "(4, 23890, 19910)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +120,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "xdata = xr.DataArray(data)\n",
-    "xdata= xdata.where(data != np.inf)"
+    "del(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-a95051410dfe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mxdata\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mxdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "xdata= xdata.where(data.data != np.inf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import earthpy.spatial as es"
    ]
   },
   {
@@ -157,6 +180,15 @@
    "metadata": {},
    "source": [
     "Plot the NDVI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import earthpy.plot as ep"
    ]
   },
   {
@@ -303,6 +335,20 @@
     "        profile = src.profile\n",
     "        with rio.open(masked, 'w', **profile) as dst:\n",
     "            dst.write(masked_arr) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#import rioxarray as rxr\n",
+    "from rasterio.windows import Window\n",
+    "import geopandas as gpd\n",
+    "import earthpy as et"
    ]
   }
  ],
